<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgetPasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="50dp"
                app:srcCompat="@drawable/login_logo" />

            <EditText
                android:id="@+id/forgetpassword_email_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:paddingLeft="25dp"
                android:hint="@string/email"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_background"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/forgetpassword_forget_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/btn_background"
                android:textColor="@color/white"
                android:text="@string/forgetpassword" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:text="@string/know_password" />
        <TextView
            android:id="@+id/forgetpassword_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:text="@string/login" />
    </LinearLayout>
</RelativeLayout>