<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <FrameLayout
            android:id="@+id/profile_user_imageview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_user_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:civ_border_width="0.5dp"
                app:civ_border_color="@color/colorPrimary"
                android:src="@drawable/deafult_profile"
                />
            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/profile_loading_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center"
                app:indicatorName="BallTrianglePathIndicator"
                app:indicatorColor="@color/colorPrimary"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_plus_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/plus_button"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="1.5dp"
                app:civ_border_overlay="true"
                android:layout_gravity="end|bottom"
                />
        </FrameLayout>

        <TextView
            android:id="@+id/profile_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/profile_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/profile_changepassword_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="40dp"
            android:textAlignment="textStart"
            android:text="@string/change_password"/>
        <Button
            android:id="@+id/profile_savedrecipes_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="40dp"
            android:textAlignment="textStart"
            android:text="@string/saved_recipe"/>
        <Button
            android:id="@+id/profile_signout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textAlignment="textStart"
            android:paddingLeft="40dp"
            android:text="@string/logout"/>

    </LinearLayout>
</ScrollView>