<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/signup_profile_imageview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="25dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/signup_profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:civ_border_width="0.5dp"
                    app:civ_border_color="@color/colorPrimary"
                    android:src="@drawable/deafult_profile"
                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/plus_button"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="1.5dp"
                    app:civ_border_overlay="true"
                    android:layout_gravity="end|bottom"
                    />
            </FrameLayout>

            <EditText
                android:id="@+id/signup_username_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:paddingLeft="25dp"
                android:hint="@string/username"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_background"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signup_email_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:paddingLeft="25dp"
                android:hint="@string/email"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_background"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/signup_password_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="25dp"
                android:ems="10"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_background"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/signup_signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:text="@string/signup" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/signup_loading_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:indicatorName="BallTrianglePathIndicator"
                app:indicatorColor="@color/colorPrimary"
            />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:text="@string/old_user" />
        <TextView
            android:id="@+id/signup_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"
            android:text="@string/login" />
    </LinearLayout>
</RelativeLayout>