<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@color/white"
    tools:context=".ChangePasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/login_logo"
            android:layout_marginBottom="50dp"
            />

        <EditText
            android:id="@+id/changepassword_oldpassword_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:paddingLeft="25dp"
            android:hint="@string/old_password"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_background"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/changepassword_newpassword_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="25dp"
            android:ems="10"
            android:hint="@string/new_password"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_background"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/changepassword_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:text="@string/save" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/changepassword_loading_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:indicatorName="BallTrianglePathIndicator"
            app:indicatorColor="@color/colorPrimary"
            />
    </LinearLayout>

</ScrollView>