<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".PostFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/post_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_image" />

            <EditText
                android:id="@+id/post_recipename_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/recipe_name"
                android:background="@drawable/post_background"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                />

            <EditText
                android:id="@+id/post_recipedetailt_edit"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine"
                android:gravity="top|left"
                android:hint="@string/recipe_details"
                android:background="@drawable/post_background"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/post_save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:text="@string/post"
                    android:textColor="@color/white" />
                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/post_loading_animation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:indicatorName="BallTrianglePathIndicator"
                    app:indicatorColor="@color/colorPrimary"
                    />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>